# 88_face

./: README.md  pyproject.toml  train.py
wtfml/data_loaders/image/: 88_mapping.py  face_88_mapping.py  image_augumentation.py  landmark_augumentation.py
wtfml/data_loaders/nlp/: classification.py  utils.py
wtfml/data_preparation/: get_data_from_bigquery.ipynb  get_tweet_data_by_twint.py  get_tweet_data_by_twitter_api.py
wtfml/engine/image/embedder/: model.py  utils.py
wtfml/engine/image/segmentation/: model.py
wtfml/engine/nlp/: model.py
wtfml/engine/pl_engine/: BERT_classification.py  PL_face_mapper.py
wtfml/utils/: config.py  utils.py
