[tool.poetry]
name = "template_for_ai_pytorch_lightning"
version = "0.1.0"
description = "This is the template for AI-Machine learning task for JX_press member"
authors = ["Yongtae Hwang"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pandas = "^1.2.4"
torch = "1.8.1"
pytorch-lightning = "^1.3.6"
scikit-learn = "^0.24.2"
albumentations = "^1.0.0"
numpy = "^1.20.3"
torchmetrics = "^0.3.2"
transformers = "^4.7.0"
torchvision = "0.9.1"
matplotlib = "^3.4.2"
tweepy = "^3.10.0"
jupyter = "^1.0.0"
mojimoji = "^0.0.11"
emoji = "^1.2.0"
neologdn = "^0.5.1"
pydata-google-auth = "^1.2.0"
google-cloud-datastore = "^2.1.3"
bs4 = "^0.0.1"
fugashi = "^1.1.1"
ipadic = "^1.0.0"
nest-asyncio = "^1.5.1"
twint = {git = "https://github.com/twintproject/twint.git", rev = "origin/master"}
segmentation-models-pytorch = "^0.2.0"

[tool.poetry.dev-dependencies]
pysen = {version = "0.9.1", extras = ["lint"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.9"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py38"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]